feat: implement LangGraph agent with chat UI
- Add LangGraph ReAct agent with tool calling
- Add agent tools: get_pipeline_info, apply_slice_filter, apply_clip_filter, set_visibility, set_color_by, delete_item
- Add config module for .env loading
- Update ChatViewModel with async agent execution (QThread)
- Add message bubble UI for chat panel
- Add langchain[openai], python-dotenv dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ dependencies = [
     "PySide6",
     "vtk",
     "langgraph",
-    "langchain",
+    "langchain[openai]",
     "pybind11",
+    "python-dotenv",
 ]
 
 [build-system]
